--- a/3Tri-2E-main/style.css
+++ b/3Tri-2E-main/style.css
@@ -10,29 +10,70 @@
 
 .body{
     font-family: Bai Jamjures;
+}
+
+body {
     background-color: bisque;
 }
-
-footer{
-    background-color: palevioletred;
+footer {
+    background-color: pink;
     color: white;
-    position: fixed;
-    width: 100%;
-    height: 2em;
-
+    bottom:0;
+    position:fixed;
+    width:100%;
 }
-
 footer p{
     text-align: center;
-    font-size: 0.8em;
-    margin: 0.5em;
+    font-size: 0.6rem;
+    height:2rem;
+    margin-top: 0,5rem;
+    font-family: Bai Jamjuree;
+}
+#container {
+    display:flex ;
+}
+    .cartao {
+        margin: 1rem 1rem;
+        background-color: rgb(219, 100, 120);
+        height: 20rem;   
+    
+}
+.cartao__conteudo {
+    text-align: center;
+    height: 100%;
+}
+.cartao__conteudo h3 {
+        background-color: rgb(255, 71, 240);
+        text-align: left;
+        padding: 0.5rem;
+        position: absolute;
+        margin: 0.6rem;
+        border-radius: 0.6rem;
+        font-size: 1vw;
+    }
+
+body {
+    background: url('img/bg-desktop.webp');
+    font-family: Bai Jamjuree;
+}
+:root {
+    --text-color: #DBE4EF;
+    --card-front-color: #80145c;
+    --card-back-color: #f400a3;
 }
 
-#container{
-    display: flex;
+.cartao__conteudo {
+    text-align: center;
+    height: 100%;
+    background-color: var(--card-front-color);
 }
-.cartao{
-    margin: 1rem;
-    background-color: lightpink;
-    height: 20rem;
+.cartao__conteudo h3 {
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
 }
