--- a/style.css
+++ b/style.css
@@ -10,4 +10,91 @@
 
 .body{
     font-family: Bai Jamjures;
+    background-color: url(img/bg-mobile.webp);
+}
+
+body {
+    background-color: bisque;
+}
+footer {
+    background-color: pink;
+    color: white;
+    bottom:0;
+    position:fixed;
+    width:100%;
+}
+footer p{
+    text-align: center;
+    font-size: 0.6rem;
+    height:2rem;
+    margin-top: 0,5rem;
+    font-family: Bai Jamjuree;
+}
+#container {
+    display:flex ;
+}
+    .cartao {
+        margin: 1rem 1rem;
+        background-color: rgb(219, 100, 120);
+        height: 20rem;   
+    
+}
+.cartao__conteudo {
+    text-align: center;
+    height: 100%;
+}
+.cartao__conteudo h3 {
+        background-color: rgb(255, 71, 240);
+        text-align: left;
+        padding: 0.5rem;
+        position: absolute;
+        margin: 0.6rem;
+        border-radius: 0.6rem;
+        font-size: 1vw;
+    }
+
+body {
+    background: url('img/bg-desktop.webp');
+    font-family: Bai Jamjuree;
+}
+:root {
+    --text-color: #DBE4EF;
+    --card-front-color: #80145c;
+    --card-back-color: #f400a3;
+}
+
+.cartao-conteudo {
+    text-align: center;
+    height: 100%;
+    background-color: var(--cor-cartao-frente);
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-outs;
+}
+.cartao-conteudo h3 {
+    background-color: #DBE4EF;
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
+    margin: 0.6rem;
+    border: solid 1px var(--te)xt-color;
+}
+
+p{
+    color: white;
+}
+.cartao-conteudo-pergunta p{
+    font-weight: 500;
+}
+.cartao-conteudo-resposta{
+    color: var(--cor-cartao-verso);
+    font-weight: 700;
+}
+.cartao-conteudo-pergunta, .cartao-conteudo-resposta{
+    margin: 1rem;
+}
+.cartao:hover .cartao-conteudo{
+    transform: rotateY(180deg);
 }
