--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 
     --text-color: #DBE4EF;
-    --cor-cartao-frente: #144480;
-    --cor-cartao-versao: #00F4BF;
+    --cor-cartao-frente: #801453;
+    --cor-cartao-versao: #bd3e9d;
 
 }
 
