--- a/style.css
+++ b/style.css
@@ -32,12 +32,15 @@ footer p {
 
 #container {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .cartao {
     margin: 1rem 1rem;
     background-color: rgb(219, 100, 120);
     height: 20rem;
+    width: 400px;
+    margin-top: 30px;
 
 }
 
